better bound checks?